chapter11/ns-and-pods.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing
  labels:
    env: testing
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: testing
spec:
  selector:
    app: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: testing
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - name: nginx
      containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: testing
spec:
  selector:
    app: myapp
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: testing
  labels:
    app: myapp
spec:
  containers:
  - name: myapp
    image: ikubernetes/myapp:v1
    ports:
    - name: myapp
      containerPort: 80
